feat: adds styled component and updates notification color matching logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,16 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "outDir": "dist",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
   },
-  "include": ["src"],
+  "include": ["src/components", "src/index.ts"],
+  "exclude": [
+    "src/**/*.stories.tsx",
+    "src/**/*.test.tsx"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
