--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "camo-notifications",
+  "description": "Notifications library that disguises itself in your application",
   "files": [
     "dist"
   ],
   "main": "./dist/camo-notifications.umd.js",
   "module": "./dist/camo-notifications.es.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/camo-notifications.es.js",
@@ -12,17 +14,22 @@
     }
   },
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "npm run clean && npm run vite-build && npm run tsc && npm run pack",
+    "clean": "rimraf --preserve-root ./dist && rimraf --preserve-root ./pkg/*",
+    "vite-build": "vite build",
+    "tsc": "tsc",
+    "pack": "npm pack --pack-destination ./pkg",
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006 --no-open",
     "build-storybook": "build-storybook"
   },
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+  "peerDependencies": {
+    "react": ">=17.0.2",
+    "react-dom": ">=17.0.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
@@ -33,7 +40,6 @@
     "@storybook/addon-links": "^6.4.20",
     "@storybook/builder-vite": "^0.1.24",
     "@storybook/jest": "^0.0.10",
-    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.4.20",
     "@storybook/testing-library": "^0.0.9",
     "@testing-library/react": "^12.1.4",
@@ -58,7 +64,6 @@
     "prettier": "2.6.2",
     "react-docgen": "^5.4.0",
     "react-docgen-typescript": "^2.2.2",
-    "sass": "^1.50.0",
     "storybook-dark-mode": "^1.0.9",
     "typescript": "^4.6.3",
     "vite": "^2.9.1"
