--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "pack": "npm pack --pack-destination ./pkg",
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006 --no-open",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -o docs-build",
+    "test": "jest --coverage",
+    "test:reset-snapshot": "npm test -- -u",
+    "posttest": "node command/posttest.mjs"
   },
   "peerDependencies": {
     "react": ">=17.0.2",
@@ -33,6 +36,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-react": "7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@storybook/addon-a11y": "^6.4.20",
     "@storybook/addon-essentials": "^6.4.20",
     "@storybook/addon-interactions": "^6.5.0-alpha.59",
@@ -41,14 +47,18 @@
     "@storybook/builder-vite": "^0.1.24",
     "@storybook/jest": "^0.0.10",
     "@storybook/react": "^6.4.20",
+    "@storybook/storybook-deployer": "^2.8.11",
     "@storybook/testing-library": "^0.0.9",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.4",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -64,7 +74,9 @@
     "prettier": "2.6.2",
     "react-docgen": "^5.4.0",
     "react-docgen-typescript": "^2.2.2",
+    "react-test-renderer": "17.0.2",
     "storybook-dark-mode": "^1.0.9",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3",
     "vite": "^2.9.1"
   }
